plugins {
	id "com.github.ben-manes.versions" version "0.51.0" apply false
	id "org.owasp.dependencycheck" version "12.1.3" apply false
}

allprojects {
	apply plugin: "com.github.ben-manes.versions"

    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs += ['-Xlint:deprecation']
    }

	dependencyUpdates {
        gradleReleaseChannel = "current"
        outputFormatter = "json"
    }

	repositories {  
		mavenCentral()
		maven {
        	url = "https://repo.spring.io/milestone/"
    	}  
    }
	version = '5.0.0-SNAPSHOT'
}

subprojects {
	apply plugin: 'java-library'
	apply plugin: 'eclipse'
	apply plugin: 'maven-publish'
	apply plugin: 'org.owasp.dependencycheck'
	group = 'at.gv.egiz.pdfas'

	// OWASP Dependency Check configuration
	dependencyCheck {
		nvd {
			// Use environment variable NVD_API_KEY
			apiKey = System.getenv('NVD_API_KEY')
			// Add delay between API calls to avoid rate limiting
			delay = 4000
		}
		// Configure output formats
		formats = ['HTML', 'JSON']
		// Suppress false positives if needed
		suppressionFile = 'dependency-check-suppressions.xml'
		// Fail build on CVSS score >= 7 (High severity)
		// failBuildOnCVSS = 7
		// Skip CVSSv4 parsing to avoid compatibility issues
		skipConfigurations = []
		// Use local database if NVD API fails
		autoUpdate = true
	}
	

	configurations {
		deployerJars
	}
	
	repositories { 
    mavenCentral() 
    mavenLocal()
    
    maven {
       	url = "https://repo.spring.io/milestone/"
       	mavenContent {
           	releasesOnly()
       	}
    }      
    maven {
       	url = "https://apps.egiz.gv.at/maven/"     	
       	mavenContent {
           	releasesOnly()
       	}
    }
    maven {
       	url = "https://apps.egiz.gv.at/maven-internal/"     	
       	mavenContent {
           	releasesOnly()
       	}
    }
    maven {
       	url = "https://apps.egiz.gv.at/maven-snapshot/"
       	mavenContent {
           	snapshotsOnly()
       	}
    }    
  }

	dependencies { 
		implementation "org.projectlombok:lombok:1.18.38"    
		annotationProcessor "org.projectlombok:lombok:1.18.38"
		testAnnotationProcessor "org.projectlombok:lombok:1.18.38"
		testImplementation 'junit:junit:4.13.2' 
	}

	task sourcesJar(type: Jar, dependsOn: classes) {
	    archiveClassifier.set('sources')
	    from sourceSets.main.allSource
	}

	artifacts {
	    archives sourcesJar
	}

	java {
		sourceCompatibility = JavaVersion.VERSION_17
		targetCompatibility = JavaVersion.VERSION_17
	}
	compileJava.options.encoding = "UTF-8"
	compileTestJava.options.encoding = "UTF-8"
	project.ext{
		releaseRepoUrl = "file://${project(':').projectDir}/../mvn-repo/releases"
		snapshotRepoUrl = "file://${project(':').projectDir}/../mvn-repo/snapshots"
		version = version
		pdfasversion = version
		revision = getCheckedOutGitCommitHash()
		//tomcatVersion = '7.0.54';
		//tomcatVersion = '8.0.36';
		//tomcatVersion = '9.0.115';
		tomcatVersion = '10.1.34';
		slf4jVersion = '2.0.16'
		cxfVersion = '4.1.4'
		// Updated versions to address security vulnerabilities
		bouncyCastleVersion = '1.70'
		commonsLang3Version = '3.18.0'
		commonsIoVersion = '2.19.0'
		commonsCodecVersion = '1.18.0'
        commonsTextVersion = '1.14.0'
		jettyVersion = '11.0.24'
		logbackVersion = '1.5.25'
		gsonVersion = '2.13.1'
		zxingVersion = '3.5.0'
		ognlVersion = '3.3.4'
		jsonVersion = '20250517'
        micrometerVersion = '1.15.4'
	  }
	
	jar { manifest.attributes provider: 'EGIZ', 'Specification-Version': getCheckedOutGitCommitHash(), 'Implementation-Version': project.version  }
	
	task copyDeps(type: Copy) {
		from configurations.runtimeClasspath
		into (new File(rootDir, 'build/alldependencies')).toString()
	}
	
	task copyDepsLocal(type: Copy) {
		from configurations.runtimeClasspath
		into 'build/alldependencies'
	}

	publishing {
    	publications {
        	myLibrary(MavenPublication) {
            	from components.java
        	}
    	}

    	repositories {
        	maven {
            	name = 'egiz_repo'
            	 url = version.endsWith('SNAPSHOT') ? project.snapshotRepoUrl : project.releaseRepoUrl
        	}
    	}
	}	
	
	// Legacy uploadArchives replaced with modern Maven publishing
	// Configure remote repositories in publishing block above  
	
	
	task(internalRelease) {
		doLast {
		
		}
	}
	
	internalRelease.dependsOn jar
	internalRelease.dependsOn sourcesJar
	
	gradle.taskGraph.whenReady {taskGraph ->
    	//if (taskGraph.hasTask(release)) {
        //	version = '1.0'
    	//} else {
	    //    version = '1.0-SNAPSHOT'
	    //}
	}
	
	//doFullRelease jar war distZip distTar releases sourcesJar uploadArchives

}

task(doFullRelease) {
	def projectVer = version
	doLast {
		println "done building all distribution stuff for " + projectVer
	}
}

task copyLicenses {
	doLast {
   		mkdir("releases/"+ version +"/licenses");
   		def target = rootProject.projectDir.toString() + "/releases/" + version + "/licenses"
		subprojects{ subproject ->
	    	def src = subproject.projectDir.toString() + "/licenses"
	    	copy{
				from src
				into target
			}
		}
	}
}

task releases(type: Copy) {
    dependsOn copyLicenses
	from ('doc') {
        include '*.pdf'
    }
	
	into "releases/" + version + "/docs"
}


def getCheckedOutGitCommitHash() {
    def takeFromHash = 40
    try {
		return providers.exec {
			commandLine('git', 'rev-parse', '--verify', 'HEAD')
		}.standardOutput.asText.get().trim().take(takeFromHash)
    } catch (Exception e) {
        return "unknown"
    }
}
/*
task docs(type: Javadoc) {
	source subprojects.collect {project -> project.sourceSets.main.allJava }
	classpath = files(subprojects.collect {project -> project.sourceSets.main.compileClasspath})
	destinationDir = new File(projectDir, 'docs/full')
}*/


